# BridgeMost

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bridgemost.service.example  config.example.yaml  dm_apex.db  dm_apex.db-shm  dm_apex.db-wal  messages.db-shm  messages.db-wal  pyproject.toml  teleghost.service.example
src/bridgemost/: __init__.py  __main__.py  bridge.py  config.py  core.py  health.py  mattermost.py  store.py  telegram_presentation.py  websocket.py  whisper.py
src/bridgemost/adapters/: __init__.py  base.py  telegram.py
src/teleghost/: __init__.py  __main__.py  bridge.py  config.py  health.py  markdown.py  mattermost.py  setup.py  websocket.py
tests/: test_bridge.py  test_config.py  test_core_bridge_commands.py  test_mattermost.py  test_telegram_bridge_command.py  test_telegram_command_passthrough.py  test_v227_hardening.py  test_version_consistency.py
