[project]
name = "teleghost"
version = "0.0.1"
description = "Telegram ↔ Mattermost transparent bridge. Messages appear native."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TeleGhost Contributors"},
]
keywords = ["telegram", "mattermost", "bridge", "relay", "ghost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "python-telegram-bot>=21.0",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[project.scripts]
teleghost = "teleghost.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
